# kikis.io-server

./: .gitignore  ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  README.md  ZERO_CHECK.vcxproj  cmake_install.cmake  kikis-cpp.sln
Archive/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists-orig.cmake  key.priv  (+5 more)
SRC/: .get.cpp.swp  .get.cpp.un~  .new 0.txt.swp  .new 0.txt.un~  .set.cpp.swp  .utils.cpp.un~  .utils.h.swp  .utils.h.un~  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  IUIAutomation_wrapper.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  add.cpp  add.h  callee.cpp  callee.vcxproj  callee.vcxproj.filters  callee_new.cpp  caller.cpp  caller.vcxproj  caller.vcxproj.filters  caller_orig.h  examples_parameters.vcxproj  examples_parameters.vcxproj.filters  exec.cpp  exec.h  externs  get.bak  get.cpp  get.cpp~  insert2textControl-orig.cpp  insert2textControl.cpp  junk  junk.txt  junk~  kikis_exec.cpp  (+24 more)
SRC/Archive/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  autobahn-cpp.sln  examples_parameters.vcxproj  examples_parameters.vcxproj.filters  kikis-cpp.sln  parameters.cpp  provide_prefix.cpp  provide_prefix.vcxproj  provide_prefix.vcxproj.filters  uds.vcxproj  uds.vcxproj.filters  wampcra.cpp  wampcra.vcxproj  wampcra.vcxproj.filters  websocket_callee.cpp  websocket_callee.vcxproj  websocket_callee.vcxproj.filters
SRC/Archive/.crossbar/: config.json  key.priv  key.pub
SRC/Archive/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
SRC/Archive/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
SRC/Archive/examples/: callee.vcxproj  callee.vcxproj.filters  caller.vcxproj  caller.vcxproj.filters  cmake_install.cmake  publisher.vcxproj  publisher.vcxproj.filters  subscriber.vcxproj  subscriber.vcxproj.filters
SRC/Archive/examples/Aarchive/: INSTALL.vcxproj  INSTALL.vcxproj.filters  examples_parameters.vcxproj  examples_parameters.vcxproj.filters  provide_prefix.vcxproj  uds.vcxproj  uds.vcxproj.filters  wampcra.vcxproj  wampcra.vcxproj.filters  websocket_callee.vcxproj  websocket_callee.vcxproj.filters
SRC/Archive/examples/Aarchive/examples_parameters.dir/Debug/examples.514E6441.tlog/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  examples_parameters.lastbuildstate
SRC/Archive/examples/Aarchive/wampcra.dir/Debug/wampcra.tlog/: CL.read.1.tlog  CL.write.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/Archive/examples/Aarchive/websocket_callee.dir/Debug/websocket_callee.tlog/: CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/Archive/examples/Debug-works/: examples_parameters.lib
SRC/Archive/examples/callee.dir/Debug/callee.tlog/: CL.command.1.tlog  CL.write.1.tlog  callee.lastbuildstate  custombuild.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/Archive/examples/caller.dir/Debug/caller.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/Archive/examples/provide_prefix.dir/Debug/provide_prefix.tlog/: CL.command.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/Archive/examples/publisher.dir/Debug/publisher.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/Archive/examples/subscriber.dir/Debug/subscriber.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/Archive/examples_parameters.dir/Debug/examples.A6BBF17C.tlog/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
SRC/Archive/examples_parameters.dir/Debug/examples.C381888C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  examples_parameters.lastbuildstate
SRC/Archive/provide_prefix.dir/Debug/: UIAutomationClient.h  UIAutomationClient.tlb  UIAutomationClient_i.c
SRC/Archive/provide_prefix.dir/Debug/provide_prefix.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  midl.command.1.tlog  midl.read.1.tlog  midl.write.1.tlog
SRC/Archive/uds.dir/Debug/uds.tlog/: custombuild.command.1.tlog
SRC/Archive/wampcra.dir/Debug/wampcra.tlog/: CL.command.1.tlog  CL.write.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/Archive/websocket_callee.dir/Debug/websocket_callee.tlog/: CL.command.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  websocket_callee.lastbuildstate
SRC/Release/: examples_parameters.lib
SRC/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog
SRC/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: custombuild.command.1.tlog
SRC/callee.dir/Release/callee.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/caller.dir/Release/caller.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/examples_parameters.dir/Release/examples.C381888C.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
SRC/publisher.dir/Release/publisher.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
SRC/subscriber.dir/Release/subscriber.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
(+29 files in other folders)
